--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,29 @@ dist.dir=dist
 dist.jar=${dist.dir}/Mapas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=lib\\commons-beanutils-1.8.2.jar
+file.reference.commons-digester-2.0.jar=lib\\commons-digester-2.0.jar
+file.reference.commons-javaflow-20060411.jar=lib\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.jar=lib\\commons-logging-1.1.jar
+file.reference.commons.collections-3.2.1.jar=lib\\commons.collections-3.2.1.jar
+file.reference.groovy-all-1.8.0.jar=lib\\groovy-all-1.8.0.jar
+file.reference.itext-2.1.7.js5.jar=lib\\itext-2.1.7.js5.jar
+file.reference.jasper-compiler-jdt.jar=lib\\jasper-compiler-jdt.jar
+file.reference.jasperreports-6.3.1.jar=lib\\jasperreports-6.3.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jasper-compiler-jdt.jar}:\
+    ${file.reference.commons-digester-2.0.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.commons.collections-3.2.1.jar}:\
+    ${file.reference.jasperreports-6.3.1.jar}:\
+    ${file.reference.groovy-all-1.8.0.jar}:\
+    ${file.reference.itext-2.1.7.js5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
